# Universidad

./: Copia de listado_revistas_mateo.xlsx  INFORME_TRANSFORMACION.md  INFORME_TRANSFORMACION_FINAL.md  codigo_fuente_total.txt  estructura.txt  estructura_proyecto.txt
backend/: .gitignore  AGENT_CONFIGURATION_SUGGESTIONS.md  README.md  app.py  pyproject.toml
backend/src/configs/: db.py  gemini_config.py
backend/src/controllers/: analysis_controller.py  auth_controller.py  dataset_controller.py  prompt_controller.py
backend/src/models/: dataset_model.py  gemini_model.py  prompt_model.py  user_model.py
backend/src/routes/analysis/: analysis_routes.py
backend/src/routes/auth/: __init__.py  auth_routes.py
backend/src/routes/datasets/: __init__.py  dataset_routes.py
backend/src/routes/prompt/: prompt_routes.py
backend/src/services/: analyze_service.py  auth_service.py  bibliometric_service.py  dataset_service.py  export_service.py  file_parse_service.py  gemini_service.py  prompt_service.py
backend/src/utils/: auth_utils.py  error_handler.py  file_processor.py  pdf_generator.py
frontend/: README.md  index.html  package-lock.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/docs/: docs.js
frontend/src/api/services/: analysisService.js  authService.js  datasetService.js  promptService.js
frontend/src/components/UI/: Button.jsx  InputControl.jsx  ListItem.jsx
frontend/src/components/analysis/: DatasetList.jsx  (+3 more)
frontend/src/hooks/: useAuth.jsx
frontend/src/pages/: AnalysisPage.jsx  Docs.jsx  LandingPage.jsx  PromptsPage.jsx
(+4 files in other folders)
